# lineforge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
scripts/: install.sh
src/: error.rs  main.rs
src/cli/: commands.rs  settings.rs
src/config/: mod.rs
src/iterm/: mod.rs
src/server/: api.rs  mod.rs  sse.rs  templates.rs
src/session/: chat.rs  log.rs  manager.rs  mod.rs  model.rs  pty.rs
static/: app.js  style.css
templates/: base.html  index.html  new.html  session.html
